# photo-derush

./: .gitignore  README.md  SECURITY_AUDIT_CURRENT.md  SECURITY_AUDIT_FINAL.md  SECURITY_AUDIT_PUBLIC.md  STUDY_OUTPUTS.md  app.py  coco_class_impact.json  coco_class_impact_v2.json  compare_and_apply_best.py  conftest.py  debug-start.sh  diagnose-autolabel.sh  feature_cache.pkl  generate_features_plot.py  labels.csv  main.py  plan.md  plot_top_features_correlation.py  precompute.py  progress.md  pyproject.toml  pyrightconfig.json  pytest.ini  reload-mcp.sh  run_detection.sh  run_plot.py  sitecustomize.py  start-servers.sh  technical_report.html  test-auto-to-manual.sh  test-no-unlabeled-fix.sh  test-review-filters.sh  test_detection.sh  test_duplicate_slayer.py  test_feature_importance.py  test_fullscreen_guard.py  test_info_panel_exif_all.py  test_keep_prob_logging.py  test_label_update_trace.py  (+10 more)
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
docs/: CACHE_DISABLE.md  CACHE_LIST.md  CHANGELOG.md  COCO_CLASS_IMPACT_ANALYSIS.md  COMPUTATION_DEVICES.md  CPROFILE_MULTITHREAD.md  CROSS_PLATFORM_COMPATIBILITY.md  FILES_CREATED.md  HOTSPOTS_AND_OPTIMIZATIONS.md  IMPROVEMENTS.md  ITERATIVE_OPTIMIZATION_RESULTS.md  LOGGING_OPTIMIZATION.md  LSH_ALGORITHM_EXPLAINED.md  MODEL.md  OPTIMIZATION_EXIF_PRELOAD.md  OPTIMIZATION_IMAGEHASH_LSH.md  OPTIMIZATION_IMPLEMENTATION_RESULTS.md  OPTIMIZATION_ITERATION_1.md  OPTIMIZATION_ITERATION_10_IMPLEMENTED.md  OPTIMIZATION_ITERATION_2.md  OPTIMIZATION_OPPORTUNITIES_ITERATION_10.md  OPTIMIZATION_PIL_IMAGE_CACHE.md  OPTIMIZATION_RESULTS.md  OPTIMIZATION_SOLUTIONS.md  PIL_IMAGE_CACHE_PERFORMANCE.md  PROFILER_CHOICE.md  PROFILER_COMPARISON.md  PROFILING.md  PROFILING_ANALYSIS.md  PROFILING_ITERATION_10.md  PROFILING_ITERATION_11_RESULTS.md  PROFILING_ITERATION_12_FINAL.md  PROFILING_ITERATION_13_COMPARISON.md  PROFILING_ITERATION_14_PIL_CACHE.md  PROFILING_ITERATION_3.md  PROFILING_ITERATION_4.md  PROFILING_ITERATION_5.md  PROFILING_ITERATION_6.md  PROFILING_ITERATION_7.md  PROFILING_ITERATION_8.md  (+6 more)
ml/: __init__.py  annotate_faces.py  check_feature_variation.py  event_log.jsonl  exif_features.py  exif_inventory.py  exif_inventory_full.json  face_detection.py  feature_cache.json  features.py  features_cv.py  persistence.py  personal_learner.py  personal_model.joblib  scan_first_faces.py
models/: baseline_current.joblib  baseline_current.joblib.calib.joblib  current_model.joblib
photo_derush/: active_learning.py  aesthetic.py  analyzer.py  blur.py  (+20 more)
(+326 files in other folders)
